Adjusted mobile responsiveness and corrected the weird overlapping photo issue

--- a/css/style.css
+++ b/css/style.css
@@ -17,14 +17,11 @@ h2{
 .addArea {
 	border-left:5px solid black;
 	height:800px;
+	
 }
 .imageArea {
 	height: 800px;
 }
 .lookBetter {
 	text-align: center;
-}
-.grabMe {
-	display: inline-block;
-	
 }
